# hrcomparison

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  LICENSE.txt  Makefile  README.md  activate.sh  chart.py  conftest.py  data.json  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  tcx.py
.github/workflows/: ci.yml  pip_publish.yml  static.yml
htmlcov/: class_index.html  d_145eef247bfb46b6_chart_py.html  d_145eef247bfb46b6_tcx_py.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_activity_parser_py.html  z_145eef247bfb46b6_base_py.html  z_145eef247bfb46b6_chart_py.html  z_145eef247bfb46b6_fit_py.html  z_145eef247bfb46b6_gpx_py.html  z_145eef247bfb46b6_tcx_py.html  z_18700cf7fcfca169___about___py.html  z_18700cf7fcfca169_activity_parser_py.html  z_18700cf7fcfca169_base_py.html  z_18700cf7fcfca169_chart_py.html  z_18700cf7fcfca169_fit_py.html  z_18700cf7fcfca169_gpx_py.html  z_18700cf7fcfca169_tcx_py.html
scripts/: compile_requirements.sh  include_pyproject_requirements.py  verup.sh
src/: activity_parser.py  base.py  chart.py  fit.py  gpx.py  tcx.py
src/hrcomparison/: __about__.py  __init__.py  activity_parser.py  base.py  chart.py  fit.py  gpx.py  tcx.py
test/: test_tcx.py
tests/: 20180415_ski_garmin.tcx  conftest.py  tcx_test.py  test_draw_chart.py  test_parser.py  test_tcx.py
